tests/machine/x/ocaml/cross_join_triple.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/cross_join_triple.ml", line 49, characters 16-22:
49 |     try __loop1 combos with Break -> ()
                     ^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 49):
  47 |         ; __loop1 rest
  48 |     in
  49 |     try __loop1 combos with Break -> ()
  50 | 
